# DPO_InvFold

./: DDP_TRAINING.md  MANIFEST.in  README.md  pyproject.toml  run_example_training.sh
examples/: example_multichain_training_data.json  example_training_data.json  run_example_training.sh
readmes/: CHECKLIST.md  MULTICHAIN_GUIDE.md  MUTABLE_MASK_IMPLEMENTATION.md  MUTABLE_MASK_USAGE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_SOLUBLE_MODELS.md  SETUP_GUIDE.md  XPU_SUPPORT.md  XPU_TROUBLESHOOTING.md
scripts/: check_device_support.py  run_dpo_ddp_aurora.sh  run_dpo_ddp_local.sh  setup_base_models.sh  setup_xpu_env.sh  split_exampledata.py  test_installation.py  test_multichain.py
src/dpo_inv/: inference.py  model.py  mpnn_utils.py  run_dpo.py  run_dpo_ddp.py  run_dpo_divreg.py
src/dpo_inv/data/: __init__.py  db.py  dd.py  global.py  time.py  utils.py
tests/: example_mutable_positions.json  test_mutable_mask.py  test_mutable_mask_simple.py
