[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpo-invfold"
version = "0.1.0"
description = "Direct Preference Optimization for Inverse Protein Folding with BioMPNN"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Archit Vasan", email = "125404521+architvasan@users.noreply.github.com"}
]
keywords = ["protein design", "inverse folding", "DPO", "ProteinMPNN", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    #"torch>=1.12.0",
    #"numpy>=1.21.0",
    #"biopython>=1.79",
    #"pyyaml>=5.4",
    #"tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    #"pytest>=7.0.0",
    #"black>=22.0.0",
    #"flake8>=4.0.0",
    #"mypy>=0.950",
]
xpu = [
    #"intel-extension-for-pytorch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/architvasan/DPO_InvFold"
Repository = "https://github.com/architvasan/DPO_InvFold"
Issues = "https://github.com/architvasan/DPO_InvFold/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dpo_inv*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

